gap fixed

--- a/style1.css
+++ b/style1.css
@@ -339,7 +339,7 @@ div {
     font-size: 18px;
   }
   .rightNav {
-    gap: 0px;
+    gap: 2px;
   }
 
   .friend {
